  * debhelper.in/libnss-dns-udeb.install, debhelper.in/libnss-files-udeb.install: 
    fix the installation path.  (Closes: #370523)
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1583 (from glibc-bsd)
    to fix the build with gcc-4.1.
  * patches/m32r/local-ports-m32r.diff: remove libc_cv_gcc_unwind_find=yes
    from m32r/configure by Kazuhiro Inaoka.  (Closes: #371052)

  [ Denis Barbier ]
  * debian/patches/localedata/tailor-iso14651_t1.diff: Fix several collation
    rules, which could cause errors in regular expressions with character
    ranges, in particular with et_EE locale.  (Closes: #362514)
  * debian/patches/localedata/locale-csb_PL.diff
  * debian/patches/localedata/locale-ro_RO.diff
  * debian/patches/localedata/locale-se_NO.diff: Apply similar fixes.
  * debian/main/control.in: make locales Conflicts: belocs-locales-data.

 -- Aurelien Jarno <aurel32@debian.org>  Mon,  5 Jun 2006 18:07:13 +0200

glibc (2.3.6-13) unstable; urgency=low

  * debian/patches/alpha/local-gcc4.1.diff: fix a small typo. sigh.
  * debian/control.in/main: build-depends on libc6-dev-s390x on s390.
  * Remove any/local-libgcc-static.diff.  (Closes: #369636, #369641)

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 May 2006 07:20:14 +0200

glibc (2.3.6-12) unstable; urgency=low

  * Don't do a udeb pass, it is still too buggy.  (Closes: #369492)
  * debian/control.in/main: build-depends on libc6-dev-sparc64 on sparc.
  * Add patches/alpha/local-gcc4.1.diff (fix build with gcc-4.1) from
    Falk Hueffner.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1571 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 30 May 2006 22:35:35 +0200

glibc (2.3.6-11) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/rules/build.mk: don't remove ld.so from udeb packages.
  * debian/rules: move udeb_add-ons to debian/sysdeps/{kfreebsd,linux}.mk.
  * M32R support:  (Closes: #366962)
    - debian/rules.d/control.mk: add m32r.