@@ -18,7 +18,7 @@ debian/tmp-libc/usr/lib/libmachuser.a usr/lib
 debian/tmp-libc/usr/lib/libmcheck.a usr/lib
 debian/tmp-libc/usr/lib/libnsl.a usr/lib
 debian/tmp-libc/usr/lib/libresolv.a usr/lib
-debian/tmp-libc/usr/lib/librpcsvc.a* usr/lib
+debian/tmp-libc/usr/lib/librpcsvc.a usr/lib
 debian/tmp-libc/usr/lib/librt.a usr/lib
 debian/tmp-libc/usr/lib/libutil.a usr/lib
 
