@@ -19,6 +19,8 @@ glibc (2.3.6-14) UNRELEASED; urgency=low
     to fix the build with gcc-4.1.
   * patches/m32r/local-ports-m32r.diff: remove libc_cv_gcc_unwind_find=yes
     from m32r/configure by Kazuhiro Inaoka.  (Closes: #371052)
+  * rules.d/debhelper.mk: don't install librpcsvc.a when cross-compiling.
+    (Closes: #369657)
 
   [ Denis Barbier ]
   * debian/patches/localedata/tailor-iso14651_t1.diff: Fix several collation
